# CROUStillantBackup

./: .env.example  Dockerfile  README.md  __main__.py  crontab  docker-compose.yml  pyproject.toml  requirements.txt
CROUStillantBackup/: backup.py  notifications.py
